@@ -1,3 +1,8 @@
+2025-02-22 Gabriele Gorla <gorlik@yahoo.com>
+
+    * src/mos6502/gen.c:
+      Replace direct access to _G.tempOfs with a function.
+
 2025-02-21 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/bug-3834.c:
